fixtures/python/fallback/should_fail/fallback_identifier.py
fallback_timeout = 30
FALLBACK_CONFIG = {"host": "localhost"}

def get_fallback_value():
    return "default"
